Added local copy of marionette js
storing a local copy of marionette because version 2.0 contains too many
breaking changes

--- a/sample.html
+++ b/sample.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Questionnaires</title>
+    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css" />
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 </head>
 <body>
@@ -34,7 +35,7 @@
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js" ></script>
     <script src="http://underscorejs.org/underscore-min.js" ></script>
     <script src="http://backbonejs.org/backbone-min.js" ></script>
-    <script src="http://marionettejs.com/downloads/backbone.marionette.min.js" ></script>
+    <script src="js/vendors/backbone.marionette.js" ></script>
     
     <script src="js/vendors/backbone.stickit.min.js" ></script>
     <script src="js/questionnaires.app.js" ></script>    
